# llm_and_agent_patterns

./: README.md  config.py  pyproject.toml
workflows/1_augmented_llm/: structured_output.py  tool_calling.py
workflows/2_prompt_chaining/: prompt_chaining.py
workflows/3_parallel/: parallel.py
workflows/4_routing/: routing.py
workflows/5_orchestrator_worker/: final_report.md  orchestrator_worker.py
workflows/6_evaluator_optimizer/: evaluator_optimizer.py  state.json  suggestion.md
workflows/7_agent/: EXAMPLE.MD  README.md  agent.py  db.json  db.py  llm.py  main.py  tools.py  workflow.py
