[project]
name = "llm-design-patterns"
version = "0.1.0"
description = "LLM Design Patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dotenv>=0.9.9",
  "ipython>=8.32.0",
  "langchain-anthropic>=0.3.8",
  "langchain-core>=0.3.40",
  "langgraph>=0.2.75",
  "pydantic>=2.10.6",
]
